[package]
name = "vntctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vnt = { path = "../vnt", package = "vnt",default-features = false }
common = { path = "../common" }
console = "0.15"
os_info = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
log4rs = "1.3"
log = "0.4"
uuid ={ version = "1.8", features = ["v4"] }

[target.'cfg(any(target_os = "linux",target_os = "macos"))'.dependencies]
sudo = "0.6"

[features]
default = ["server_encrypt","aes_gcm","aes_cbc","aes_ecb","sm4_cbc","ip_proxy"]
openssl = ["vnt/openssl"]
openssl-vendored = ["vnt/openssl-vendored"]
ring-cipher = ["vnt/ring-cipher"]
aes_cbc=["vnt/aes_cbc"]
aes_ecb=["vnt/aes_ecb"]
sm4_cbc=["vnt/sm4_cbc"]
aes_gcm=["vnt/aes_gcm"]
server_encrypt=["vnt/server_encrypt"]
ip_proxy=["vnt/ip_proxy"]
